132 - add unit test for controller, repo and service