@@ -2,13 +2,19 @@ package com.example.learn_spring_framework.serviceTest;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.anyString;
 
+import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -39,11 +45,25 @@ public class StudentServiceImplTest {
 	@InjectMocks 
 	private StudentServiceImpl stuService;
 	
+	private Student mockStudent;
+	private User mockUser;
+	
+	@BeforeEach
+	void setUp() {
+		mockUser = new User();
+		mockUser.setId(1L);
+		mockUser.setUserName("user_test");
+		
+		mockStudent = new Student("SV001", "Phùng Tuấn Đạt", mockUser);
+		mockStudent.setDeleted(false);
+	}
+	
 	@Test
-	@DisplayName("Test getAllStudent: must return a Page hold a list of students")
-	void getAllStudent_whenExists_shouldReturnPageOfStudent() {
+	@DisplayName("Test getAllStudent: must return a list of students")
+	void getAllStudent_whenExists_shouldReturnStudents() {
 		//Arrange
-		Page<Student> mockPage = new PageImpl<>(java.util.Collections.emptyList());
+		Page<Student> mockPage = new PageImpl<>(List.of(mockStudent));
+		//return Page result from database
 		
 		when(stuRepo.findAllByDeletedFalse(any(Pageable.class))).thenReturn(mockPage);
 		
@@ -52,20 +72,15 @@ public class StudentServiceImplTest {
 		
 		//Assert
 		assertThat(result).isNotNull();
-		
+		assertEquals(1, result.getNumberOfElements());
 		verify(stuRepo, times(1)).findAllByDeletedFalse(any(Pageable.class));
 	}
 	
 	@Test
     @DisplayName("Test getById: must return student when id is existed")
 	void getById_whenExists_shouldReturnStudent() {
-		// Arrange
-		String id = "SV001";
-		Student mockStudent = new Student();
-		mockStudent.setStudentId(id);
-		mockStudent.setFullName("Phùng Tuấn Đạt");
 
-		when(stuRepo.findByStudentIdAndDeletedFalse(id)).thenReturn(Optional.of(mockStudent));
+		when(stuRepo.findByStudentIdAndDeletedFalse("SV001")).thenReturn(Optional.of(mockStudent));
 		
 		// Act
 		Student result = stuService.getById("SV001");
@@ -73,18 +88,17 @@ public class StudentServiceImplTest {
 		// Assert
 		assertThat(result).isNotNull();
 		assertThat(result.getFullName()).isEqualTo("Phùng Tuấn Đạt");
-        verify(stuRepo).findByStudentIdAndDeletedFalse(id); // Check if repo was called
+        verify(stuRepo).findByStudentIdAndDeletedFalse("SV001"); // Check if repo was called
 	}
 	
 	@Test
 	@DisplayName("Test getByID: not found student must return NoResultException")
 	void getById_whenNotExist_shouldReturnNotFound() {
-		String id = "SV999";
 		
-		when(stuRepo.findByStudentIdAndDeletedFalse(id)).thenReturn(Optional.empty());
+		when(stuRepo.findByStudentIdAndDeletedFalse("SV002")).thenReturn(Optional.empty());
 		
 		assertThrows(NoResultException.class, () -> {
-			stuService.getById(id);
+			stuService.getById("SV002");
 		});
 	}
 	
@@ -97,16 +111,11 @@ public class StudentServiceImplTest {
 		request.setPassword("htp@123");
 		request.setUserName("htp");
 		
-		User mockUser = new User();
-		mockUser.setUserName(request.getUserName());
-		
-		Student mockStudent = new Student(request.getNewStudentId(), request.getNewStudentName(), mockUser);
-		
 		when(stuRepo.existsById("SV002")).thenReturn(false);
 		
 		when(userService.createStudentUser("htp", "htp@123")).thenReturn(mockUser);
 		
-		when(stuRepo.save(any(Student.class))).thenReturn(mockStudent);
+		when(stuRepo.save(any(Student.class))).thenReturn(new Student("SV002", "Huỳnh Thanh Phong", mockUser));
 		
 		Student student = stuService.add(request);
 		
@@ -114,7 +123,6 @@ public class StudentServiceImplTest {
 		assertThat(student.getStudentId()).isEqualTo("SV002");
 		
 		verify(userService).createStudentUser("htp", "htp@123");
-		
 		verify(stuRepo).save(any(Student.class));
 	}
 	
@@ -123,12 +131,6 @@ public class StudentServiceImplTest {
 	void addStudent_whenExistsId_shouldReturnIllegalStateException() {
 		AddStudentRequest request = new AddStudentRequest();
 		request.setNewStudentId("SV002");
-		request.setNewStudentName("Huỳnh Thanh Phong");
-		request.setPassword("htp@123");
-		request.setUserName("htp");
-		
-		User mockUser = new User();
-		mockUser.setUserName(request.getUserName());
 		
 		when(stuRepo.existsById("SV002")).thenReturn(true);
 		
@@ -141,35 +143,74 @@ public class StudentServiceImplTest {
 	@Test
 	@DisplayName("Test modify: Modify student information successfully")
 	void modifyStudent_shouldModifySuccesfully() {
-		String id = "SV001";
 		ModifyStudentRequest req = new ModifyStudentRequest();
-		req.setNewStudentName("Ten moi");
+		req.setNewStudentName("Uất Quỳnh Nga");
+		req.setNewUserName("uqn");
+		req.setNewPassword("uqn@123");
 		
-		User mockUser = new User();
-		Student student = new Student(id, "Ten cu", mockUser);
-		
-		when(stuRepo.findByStudentIdAndDeletedFalse(id)).thenReturn(Optional.of(student));
-		when(stuRepo.save(any(Student.class))).thenReturn(student);
+		when(stuRepo.findByStudentIdAndDeletedFalse("SV001")).thenReturn(Optional.of(mockStudent));
+		when(stuRepo.save(any(Student.class))).thenReturn(mockStudent);
 	
-		Student result = stuService.modify(id, req);
+		Student result = stuService.modify("SV001", req);
 		
-		assertThat(result.getFullName()).isEqualTo("Ten moi");
+		assertThat(result.getFullName()).isEqualTo("Uất Quỳnh Nga");
+		verify(userService, times(1)).modifyUser(any(User.class), anyString(), anyString());
 		verify(stuRepo).save(any(Student.class));
 	}
 	
 	@Test
 	@DisplayName("Test delete: Soft deleted must be worked by set deleted = true")
 	void deletedStudent_shouldSetDeletedFalse() {
-		String id = "SV001";
-		Student student = new Student();
-		student.setDeleted(false);
-		student.setFullName("A");
-		student.setStudentId(id);
 		
-		when(stuRepo.findByStudentIdAndDeletedFalse(id)).thenReturn(Optional.of(student));
+		when(stuRepo.findByStudentIdAndDeletedFalse("SV001")).thenReturn(Optional.of(mockStudent));
 		
-		stuService.delete(id);
+		stuService.delete("SV001");
 		
+		assertTrue(mockStudent.isDeleted());
 		verify(stuRepo).save(any(Student.class));
+	}
+	
+	@Test
+	@DisplayName("Restore student: Restore Successfully")
+	void restoreStudent_shouldSetDeletedTrue() {
+		mockStudent.setDeleted(true);
+		
+		when(stuRepo.findStudentByStudentIdAndDeleted("SV001", true)).thenReturn(Optional.of(mockStudent));
+		
+		stuService.restore("SV001");
+		
+		assertFalse(mockStudent.isDeleted());
+		verify(stuRepo).save(mockStudent);
+	}
+	
+	@Test
+	@DisplayName("Restore student: Not found student in bin")
+	void restoreStudent_notFoundInBin_ShouldThrowNoResultException() {
+		
+		when(stuRepo.findStudentByStudentIdAndDeleted("SV001", true)).thenReturn(Optional.empty());
+		
+		assertThrows(NoResultException.class, () -> {
+			stuService.restore("SV001");
+		});
+	}
+	
+	@Test
+	@DisplayName("Get deleted students in bin successfully!")
+	void getBin_shouldReturnDeletedStudents() {
+		when(stuRepo.findAllByDeletedTrue()).thenReturn(List.of(mockStudent));
+		
+		List<Student> bin = stuService.getBin();
+		
+		assertFalse(bin.isEmpty());
+		verify(stuRepo).findAllByDeletedTrue();
+	}
+	
+	@Test
+	@DisplayName("Deleted all student successfully")
+	void deletedAllStudent_shouldSuccessfully() {
+		
+		stuService.deleteAll();
+		
+		verify(stuRepo).softDeleteAllStudents();
 	}
 }
